Programmed all nav links
When writing CSS, remember to hide #footer-nav on smaller screens, display on larger

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="flex-container">
         <h1>Marco Davidson</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="#top">Home</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
     <main>
