--- a/index.html
+++ b/index.html
@@ -4,57 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../normalize.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Mobile-First Responsive Layout</title>
 </head>
 <body>
     <header class="flex-container">
-        <h1>Marco Davidson</h1>
-        <nav>
-            <a href="#top">Home</a>
+        <h1>Student Name</h1>
+        <nav id="main-nav" class="flex-container">
+            <a href="#home">Home</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
     <main>
-        <section class="flex-container" id="home">
-            <img src="images/responsive-layout-profile.png" alt="Cartoon character Marco's professional headshot">
+        <section id="home">
+            <img id="profile-image" src="images/responsive-layout-profile.png" alt="Cartoon character's professional headshot">
             <p>Hi, I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </section>
-        <section class="flex-container" id="portfolio">
-            <h2>Portfolio</h2>
-            <h3>Marketing Page</h3>
+        <section id="portfolio">
+            <h2 id="portfolio-title">Portfolio</h2>
             <img src="images/portfolio-1.png" alt="Screenshot of example marketing page project">
-            <p>This project shows the front page of a marking website meant for a specific business I'm interested in.</p>
-            <h3>Search Page</h3>
+            <h3>Marketing Page</h3>
+            <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
             <img src="images/portfolio-2.png" alt="Screenshot of example search page project">
+            <h3>Search Page</h3>
             <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-            <h3>Travel App</h3>
             <img src="images/portfolio-3.png" alt="Screenshot of example travel app project">
+            <h3>Travel App</h3>
             <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-            <h3>Map of Favorite Spots</h3>
             <img src="images/portfolio-4.png" alt="Screenshot of example map project">
+            <h3>Map of Favorite Spots</h3>
             <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-            <h3>Photo Gallery</h3>
             <img src="images/portfolio-5.png" alt="Screenshot of example photo gallery project">
+            <h3>Photo Gallery</h3>
             <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-            <h3>Calculator</h3>
             <img src="images/portfolio-6.png" alt="Screenshot of example calculator project">
+            <h3>Calculator</h3>
             <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </section>
-        <section class="flex-container" id="contact">
+        <section id="contact">
             <h2>Contact</h2>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-            <p>Phone: +1 (111) 555-1234</p>
-            <p>Email: email@yoursite.com</p>
+            <div id="contact-info">
+                <p>Phone: +1 (111) 555-1234</p>
+                <p>Email: email@yoursite.com</p>
+            </div>
         </section>
     </main>
-    <footer class="flex-container">
-        <p id="footer-name">Marco Davidson</p>
-        <a href="#top" id="back-to-top-link">Back to top</a>
-        <nav class="flex-container" id="footer-nav">
-            <a href="#home">Home</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+    <footer>
+        <h2 id="footer-name">Student Name</h2>
+        <nav id="footer-nav">
+            <a href="#top">Back to top</a>
+            <a href="#home" class="hide">Home</a>
+            <a href="#portfolio" class="hide">Portfolio</a>
+            <a href="#contact" class="hide">Contact</a>
         </nav>
     </footer>    
 </body>
