Couple more format changes for mobile view

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <h2>Contact</h2>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
             <div id="contact-info">
-                <p>Phone: +1 (111) 555-1234</p>
-                <p>Email: email@yoursite.com</p>
+                <p>Phone: <strong>+1 (111) 555-1234</strong></p>
+                <p>Email: <strong>email@yoursite.com</strong></p>
             </div>
         </section>
     </main>
