Formatted portfolio section at 768px

--- a/index.html
+++ b/index.html
@@ -27,24 +27,37 @@
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
-            <img src="images/portfolio-1.png" alt="Screenshot of example marketing page project">
-            <h3>Marketing Page</h3>
-            <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-            <img src="images/portfolio-2.png" alt="Screenshot of example search page project">
-            <h3>Search Page</h3>
-            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-            <img src="images/portfolio-3.png" alt="Screenshot of example travel app project">
-            <h3>Travel App</h3>
-            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-            <img src="images/portfolio-4.png" alt="Screenshot of example map project">
-            <h3>Map of Favorite Spots</h3>
-            <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-            <img src="images/portfolio-5.png" alt="Screenshot of example photo gallery project">
-            <h3>Photo Gallery</h3>
-            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-            <img src="images/portfolio-6.png" alt="Screenshot of example calculator project">
-            <h3>Calculator</h3>
-            <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            <div id="portfolio-projects">
+                <div id="#project-1" class="project">
+                    <img src="images/portfolio-1.png" alt="Screenshot of example marketing page project">
+                    <h3>Marketing Page</h3>
+                    <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+                </div>
+                <div id="#project-2" class="project">
+                    <img src="images/portfolio-2.png" alt="Screenshot of example search page project">
+                    <h3>Search Page</h3>
+                    <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                </div>
+                <div id="#project-3" class="project">
+                    <img src="images/portfolio-3.png" alt="Screenshot of example travel app project">
+                    <h3>Travel App</h3>
+                    <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                </div>
+                <div id="#project-4" class="project">
+                    <img src="images/portfolio-4.png" alt="Screenshot of example map project">
+                    <h3>Map of Favorite Spots</h3>
+                    <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+                </div>
+                <div id="#project-5" class="project">
+                    <img src="images/portfolio-5.png" alt="Screenshot of example photo gallery project">
+                    <h3>Photo Gallery</h3>
+                    <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                </div>
+                <div id="#project-6" class="project">
+                    <img src="images/portfolio-6.png" alt="Screenshot of example calculator project">
+                    <h3>Calculator</h3>
+                    <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact</h2>
