Changed footer elements show/hide
Also added border box rule.. Reminded by footer walkthrough instruction

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <footer>
         <h2 id="footer-name">Student Name</h2>
         <nav id="footer-nav">
-            <a href="#top">Back to top</a>
+            <a href="#top" class="hide-2">Back to top</a>
             <a href="#home" class="hide">Home</a>
             <a href="#portfolio" class="hide">Portfolio</a>
             <a href="#contact" class="hide">Contact</a>
