--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Mobile-First Responsive Layout</title>
 </head>
 <body>
-    <header class="flex-container">
+    <header>
         <h1>Student Name</h1>
-        <nav id="main-nav" class="flex-container">
+        <nav id="main-nav">
             <a href="#home">Home</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
