Fixed a typo; background color main nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="home">
             <img id="profile-image" src="images/responsive-layout-profile.png" alt="Cartoon character's professional headshot">
-            <p>Hi, I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+            <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
