--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="home">
             <img id="profile-image" src="images/responsive-layout-profile.png" alt="Cartoon character's professional headshot">
-            <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+            <h2>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</h2>
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
@@ -57,6 +57,7 @@
                     <img src="images/portfolio-6.png" alt="Screenshot of example calculator project">
                     <h3>Calculator</h3>
                     <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+                </div>
             </div>
         </section>
         <section id="contact">
