Added some img and link hover states

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <h1>Student Name</h1>
         <nav id="main-nav">
-            <a href="#home">Home</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#home" class="grow">Home</a>
+            <a href="#portfolio" class="grow">Portfolio</a>
+            <a href="#contact" class="grow">Contact</a>
         </nav>
     </header>
     <main>
