Added education section and styled
Max-width on education and contact sections for legibility. Adding section to meet 'exceeds expectations' project requirements

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                 </div>
             </div>
         </section>
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li>Smallville High School -- Valedictorian</li>
+                <li>Metropolis University -- Bachelor's Degree in Computer Science</li>
+                <li>Team Treehouse -- Techdegree</li>
+            </ul>
+        </section>
         <section id="contact">
             <h2>Contact</h2>
             <p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
