--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav id="main-nav">
             <a href="#home">Home</a>
             <a href="#portfolio">Portfolio</a>
+            <a href="#education">Education</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -83,6 +84,7 @@
             <a href="#top" class="hide-2">Back to top</a>
             <a href="#home" class="hide">Home</a>
             <a href="#portfolio" class="hide">Portfolio</a>
+            <a href="#education" class="hide">Education</a>
             <a href="#contact" class="hide">Contact</a>
         </nav>
     </footer>    
