Small text contant edit

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <section id="education">
             <h2>Education</h2>
             <ul>
-                <li>Smallville High School -- Valedictorian</li>
-                <li>Metropolis University -- Bachelor's Degree in Computer Science</li>
-                <li>Team Treehouse -- Techdegree</li>
+                <li>Smallville High School: Valedictorian</li>
+                <li>Metropolis University: Bachelor's Degree in Computer Science</li>
+                <li>Team Treehouse: Techdegree</li>
             </ul>
         </section>
         <section id="contact">
