Rewrote media queries for 768px
I really don't think I shortened it at all, but at least I practiced some flexbox concepts again a second round. May have condensed slightly b/c I believe some rules weren't being applied. Played flexbox froggy to review align-items and justify-content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
-            <div id="portfolio-projects">
+            <div id="projects-div">
                 <div id="#project-1" class="project">
                     <img src="images/portfolio-1.png" alt="Screenshot of example marketing page project">
                     <h3>Marketing Page</h3>
