--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </section>
+        <div id="education-and-contact-div">
         <section id="education">
             <h2>Education</h2>
             <ul>
@@ -77,6 +78,7 @@
                 <p>Email: <strong>email@yoursite.com</strong></p>
             </div>
         </section>
+        </div>
     </main>
     <footer>
         <h2 id="footer-name">Student Name</h2>
