Changed filler text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Student Name</h1>
+        <h1>Mark Johnson</h1>
         <nav id="main-nav">
             <a href="#home">Home</a>
             <a href="#portfolio">Portfolio</a>
@@ -24,7 +24,7 @@
     <main>
         <section id="home">
             <img id="profile-image" src="images/responsive-layout-profile.png" alt="Cartoon character's professional headshot">
-            <h2>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</h2>
+            <h2>Hi! This project is meant to showcase skills in responsive design. The information on this page is all filler information and is not accurate info. I don't have any affiliation with Mark, but I hear he's one heck of a web developer.</h2>
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
@@ -81,7 +81,7 @@
         </div>
     </main>
     <footer>
-        <h2 id="footer-name">Student Name</h2>
+        <h2 id="footer-name">Mark Johnson</h2>
         <nav id="footer-nav">
             <a href="#top" class="hide-2">Back to top</a>
             <a href="#home" class="hide">Home</a>
