--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section id="home">
             <img id="profile-image" src="images/responsive-layout-profile.png" alt="Cartoon character's professional headshot">
-            <h2>Hi! This project is meant to showcase skills in responsive design. The information on this page is all filler information and is not accurate info. I don't have any affiliation with Mark, but I hear he's one heck of a web developer.</h2>
+            <h2>Hi! This project is meant to showcase skills in responsive design. The information on this page is all filler information and is fictional. I don't have any affiliation with Mark the cartoon.</h2>
         </section>
         <section id="portfolio">
             <h2 id="portfolio-title">Portfolio</h2>
